--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <!-- <script src="./assets/js/app.js"></script> -->
     <!-- <script src="./assets/js/protip-operador.js"></script> -->
+    <script src="./assets/js/underscore-umd-min.js"></script>
     <script src="./assets/js/blackjack.js"></script>
 </body>
 
