--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         BlackJack
     </header>
     <div class="row mt-2">
-        <div class="col text-center">
-            <button class="btn btn-danger">Nuevo Juego</button>
-            <button class="btn btn-primary">Pedir Carta</button>
-            <button class="btn btn-warning">Detener</button>
+        <div id="botones "class="col text-center">
+            <button id="btn-nuevo" class="btn btn-danger">Nuevo Juego</button>
+            <button id="btn-pedir" class="btn btn-primary">Pedir Carta</button>
+            <button id="btn-detener" class="btn btn-warning">Detener</button>
 
         </div>
 
