DOM reload page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="col">
             <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-carta">
-                <img class="carta" src="assets/cartas/10C.png">
+                <!-- <img class="carta" src="assets/cartas/10C.png"> -->
                 <!-- <img class="carta" src="assets/cartas/10C.png"> -->
                 <!-- <img class="carta" src="assets/cartas/10C.png"> -->
             </div>
@@ -37,7 +37,7 @@
         <div class="col">
             <h1>Computador 1 - <small>0</small></h1>
             <div id="computador-carta">
-                <img class="carta" src="assets/cartas/7D.png">
+                <!-- <img class="carta" src="assets/cartas/7D.png"> -->
                 <!-- <img class="carta" src="assets/cartas/7D.png">
                 <img class="carta" src="assets/cartas/7D.png"> -->
             </div>
